Avoid gap in viewer footer for child works with very large windows
This CSS has gotten a bit hack on top of hack, but good enough for now.

--- a/app/frontend/stylesheets/local/scihist_viewer.scss
+++ b/app/frontend/stylesheets/local/scihist_viewer.scss
@@ -364,6 +364,7 @@ $scihist_image_viewer_thumb_width: 54px; // Needs to match ImageServiceHelper::T
         padding: $btn-padding-y-lg $btn-padding-x-lg;
 
         border: 1px solid $primary;
+        max-width: unset;
         flex-grow: 4;
         white-space: nowrap;
         overflow: hidden;
